Some changes to make the code compatible with last version of Tianshou and other minor changes.

--- a/notebooks/nb_120_IntroOfflineRL.ipynb
+++ b/notebooks/nb_120_IntroOfflineRL.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Today, we will explore different points in offline Reinforcement Learning and in particular:\n",
+    "**Today, we will explore different points in offline Reinforcement Learning and in particular**:\n",
     "\n",
     "    1. The technical challenges in offline RL.\n",
     "    \n",
@@ -104,18 +104,27 @@
     "\n",
     "       \n",
     "    3. Standard data collection approaches and libraries used in the offline RL \n",
-    "       community\n",
+    "       community"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For our exercises, we'll primarily use a 2D grid environment for two important reasons:\n",
     "\n",
-    "For our exercises, we'll primarily use a 2D grid environment for two important reasons:\n",
     "\n",
     "    1. It allows for quick training and data collection, making trainings and \n",
     "       data-collection quite fast giving you the possibility to play around in the \n",
     "       workshop!\n",
-    " \n",
-    "    2. Simplifying the environment helps us focus on the fundamental concepts and \n",
-    "       benefits of offline RL, which can be challenging in high-dimensional spaces.\n",
+    "       \n",
+    "    \n",
+    "    2. Simplifying and customizing the environment to introduce varying levels of complexity in a controlled \n",
+    "       manner, along with the option to create your own straightforward behavior policies, can facilitate a\n",
+    "       clearer exploration of the core concepts and advantages of offline Reinforcement Learning (RL), which \n",
+    "       can be quite challenging or almost impossible with high-dimensional spaces.\n",
     "\n",
-    "However, keep in mind that both the provided library and the exercises can be adapted to handle more complex scenarios so feel free to give them a try!\""
+    "**Please note that both the provided library (/offline_rl) and the exercises (notebooks and /offline_rl/scripts) are adaptable to tackle more intricate environments and tasks. Don't hesitate to experiment with them on your own. Be prepared for some patience, as training in RL can be time-consuming when dealing with complex problems!**"
    ]
   },
   {
@@ -133,11 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   }
  ],
  "metadata": {
