--- a/notebooks/nb_151_imitation_learning-example.ipynb
+++ b/notebooks/nb_151_imitation_learning-example.ipynb
@@ -16,9 +16,7 @@
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import RenderMode\n",
     "from training_rl.offline_rl.offline_policies.offpolicy_rendering import offpolicy_rendering\n",
-    "from training_rl.offline_rl.generate_custom_minari_datasets.utils import generate_compatible_minari_dataset_name\n",
     "import minari\n",
-    "from training_rl.offline_rl.generate_custom_minari_datasets.utils import get_dataset_name_2d_grid\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import \\\n",
     "    MinariDatasetConfig, create_minari_datasets\n",
     "from training_rl.offline_rl.scripts.visualizations.utils import get_state_action_data_and_policy_grid_distributions, \\\n",
@@ -121,23 +119,18 @@
     "NUM_STEPS = 10000\n",
     "\n",
     "\n",
-    "# Minari has its own convention for dataset naming\n",
-    "name_expert_data = generate_compatible_minari_dataset_name(ENV_NAME, DATA_SET_NAME, VERSION_DATA_SET)\n",
     "\n",
-    "DATA_SET_NAME += DATA_SET_IDENTIFIER\n",
-    "DATASET_CONFIG = {\"env_name\": ENV_NAME, \"data_set_name\": name_expert_data, \"num_steps\": NUM_STEPS,\n",
-    "                  \"behavior_policy\": BEHAVIOR_POLICY, \"initial_config_2d_grid_env\": env_2D_grid_initial_config}\n",
+    "minari_dataset = create_minari_datasets(\n",
+    "    env_name=ENV_NAME,\n",
+    "    dataset_name=DATA_SET_NAME,\n",
+    "    dataset_identifier=DATA_SET_IDENTIFIER,\n",
+    "    version_dataset=VERSION_DATA_SET,\n",
+    "    num_colected_points=NUM_STEPS,\n",
+    "    behavior_policy_name=BEHAVIOR_POLICY,\n",
+    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
+    ")\n",
     "\n",
-    "# Grid world env. config\n",
-    "DATA_SET_NAME = get_dataset_name_2d_grid(env_2D_grid_initial_config) + DATA_SET_IDENTIFIER\n",
-    "name_expert_data = generate_compatible_minari_dataset_name(ENV_NAME, DATA_SET_NAME, VERSION_DATA_SET)\n",
-    "DATASET_CONFIG[\"data_set_name\"] = name_expert_data\n",
-    "\n",
-    "# MinariDatasetConfig will take care of dataset configuration (serialized, deserialize, from_dict, etc.)\n",
-    "minari_dataset_config = MinariDatasetConfig.from_dict(DATASET_CONFIG)\n",
-    "create_minari_datasets(minari_dataset_config)\n",
-    "\n",
-    "data = minari.load_dataset(DATASET_CONFIG[\"data_set_name\"])\n",
+    "data = minari.load_dataset(minari_dataset.data_set_name)\n",
     "print(\"number of episodes collected: \", len(data))\n",
     "#for elem in data:\n",
     "#    print(elem.actions, elem.truncations, elem.terminations)\n"
@@ -157,7 +150,7 @@
    "outputs": [],
    "source": [
     "# Data saved in /offline_data\n",
-    "NAME_EXPERT_DATA = \"Grid_2D_8x8_discrete-data_obst_big_8x8_start_0_0_target_0_7_exercise_5-v0\" \n",
+    "NAME_EXPERT_DATA = minari_dataset.data_set_name\n",
     "\n",
     "# fill the ReplyBuffer\n",
     "buffer_data = load_buffer_minari(NAME_EXPERT_DATA)\n",
@@ -170,7 +163,7 @@
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.005))\n",
+    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.007))\n",
     "\n",
     "snapshot_env(env)"
    ]
@@ -204,9 +197,8 @@
    },
    "outputs": [],
    "source": [
-    "NAME_EXPERT_DATA = \"Grid_2D_8x8_discrete-data_obst_big_8x8_start_0_0_target_0_7_exercise_5-v0\"\n",
-    "\n",
     "# The model policy to be trained.\n",
+    "\n",
     "POLICY_NAME = PolicyName.imitation_learning\n",
     "\n",
     "NUM_EPOCHS = 300\n",
@@ -233,6 +225,7 @@
     "    number_test_envs=NUMBER_TEST_ENVS,\n",
     "    update_per_epoch=UPDATE_PER_EPOCH,\n",
     "    restore_training=False,\n",
+    "    batch_size=BATCH_SIZE\n",
     ")"
    ]
   },
@@ -246,11 +239,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "POLICY_FILE = \"policy_final.pth\"\n",
-    "NUM_EPISODES = 100 # as more episodes the better\n",
+    "POLICY_FILE = \"policy.pth\"\n",
+    "NUM_EPISODES = 1 # as more episodes the better\n",
     "\n",
     "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
@@ -271,7 +266,7 @@
     ")\n",
     "\n",
     "# plots\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\")\n",
+    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.007))\n",
     "state_action_histogram(state_action_count_policy, title=\"State-Action policy distribution\")\n",
     "compare_state_action_histograms(state_action_count_data, state_action_count_policy)\n",
     "snapshot_env(env)"
@@ -421,9 +416,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In conclusion, imitation learning becomes interesting when one has access to noisy expert data, as it provides a means to reduce noise from the expert data.\n",
+    "**In conclusion, imitation learning becomes interesting when one has access to noisy expert data, as it provides a means to reduce noise from the expert data.**\n",
     "\n",
-    "Another noteworthy aspect of imitation learning is that it doesn't rely on rewards, making it a less complex solution to the problem of reward shaping in reinforcement learning.\n",
+    "**Another noteworthy aspect of imitation learning is that it doesn't rely on rewards, making it a less complex solution to the problem of reward shaping in reinforcement learning.**\n",
     "\n",
     "However, in realistic applications, obtaining expert data is often a challenge. In many cases, we have access to only a limited number of trajectories, rendering this method less useful for extracting optimal policies.\n",
     "\n",
@@ -433,9 +428,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tianshou_dev",
+   "display_name": "training_rl_ivan",
    "language": "python",
-   "name": "tianshou_dev"
+   "name": "training_rl_ivan"
   },
   "language_info": {
    "codemirror_mode": {
@@ -447,9 +442,22 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.0"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
