--- a/notebooks/nb_180_offline_rl_algorithms_theory.ipynb
+++ b/notebooks/nb_180_offline_rl_algorithms_theory.ipynb
@@ -145,15 +145,13 @@
    "source": [
     "IMPLICIT Q-LEARNING (IQL):\n",
     "---\n",
-    "Similar idea [paper](https://openreview.net/pdf?id=68n2s9ZJWF8)\n"
+    "In this case another interesting lower bound to the Q-value is introduced to make it more pessimistic as in point 4. See [paper](https://openreview.net/pdf?id=68n2s9ZJWF8) for more details.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
