--- a/notebooks/nb_181_Offline_rl_algorithms_I.ipynb
+++ b/notebooks/nb_181_Offline_rl_algorithms_I.ipynb
@@ -38,21 +38,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Before we saw that the DQN algorithm was bad to connect pieces of trajectories coming from different datasets (stitching). Here we will see how some of the offline algorithms introduced before, namely the BCQ and the CQL, handle this problem.**"
+    "**Previously, we observed that the DQN algorithm faced challenges when connecting pieces of trajectories from different datasets (stitching property). Now, we'll explore how two offline algorithms, BCQ and CQL, address this issue.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will start again with the previous setup. So as we did before we will create again two datasets one from a policy moving suboptimal from (0,0) to (7,0) and the other from another policy moving from (4,0) to (7,7). "
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Environment"
+    "We will start again with the previous setup. So as we did before we will create again two datasets one from a policy moving suboptimal from (0,0) to (7,0) and the other from another policy moving from (4,0) to (7,7). The scope is to find an agent able to connect trajectories coming from both datasets in order to find the optimal path between (0,0) and (7,7)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Environment"
    ]
   },
   {
@@ -64,7 +71,7 @@
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
     "\n",
     "# Env. Config.\n",
-    "OBSTACLE = ObstacleTypes.verical_object_8x8\n",
+    "OBSTACLE = ObstacleTypes.obst_free_8x8\n",
     "INITIAL_STATE = (0, 0)\n",
     "FINAL_STATE = (7, 7)\n",
     "\n",
@@ -82,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configure the two datasets"
+    "#### Configure the two datasets"
    ]
   },
   {
@@ -96,24 +103,20 @@
     "# Dataset I\n",
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_moves_downwards_within_strip\n",
     "DATA_SET_IDENTIFIER_I = \"_move_downwards\"\n",
-    "NUM_STEPS_I = 3000\n",
+    "NUM_STEPS_I = 20000\n",
     "\n",
     "# Dataset II\n",
     "#BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "DATA_SET_IDENTIFIER_II = \"_move_deterministic\"\n",
-    "NUM_STEPS_II = 300\n",
-    "\n",
-    "\n",
-    "# Policy to be trained\n",
-    "OFFLINE_POLICY = PolicyName.bcq_discrete"
+    "NUM_STEPS_II = 1000"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Minari combined dataset"
+    "#### Create Minari combined dataset"
    ]
   },
   {
@@ -136,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rendering behavioral policy"
+    "#### Rendering behavioral policy"
    ]
   },
   {
@@ -145,7 +148,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Suboptimal policy\n",
+    "#  policy I\n",
+    "offpolicy_rendering(\n",
+    "    env_or_env_name=ENV_NAME,\n",
+    "    render_mode=RenderMode.RGB_ARRAY_LIST,\n",
+    "    behavior_policy_name=BEHAVIOR_POLICY_I,\n",
+    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
+    "    num_frames=1000,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# policy II\n",
     "offpolicy_rendering(\n",
     "    env_or_env_name=ENV_NAME,\n",
     "    render_mode=RenderMode.RGB_ARRAY_LIST,\n",
@@ -159,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Choose yuor policy"
+    "#### Choose yuor policy"
    ]
   },
   {
@@ -169,7 +188,7 @@
    "outputs": [],
    "source": [
     "# The model policy to be trained.\n",
-    "POLICY_NAME = PolicyName.cql_discrete\n",
+    "POLICY_NAME = PolicyName.bcq_discrete\n",
     "\n",
     "\n",
     "NAME_EXPERT_DATA = config_combined_data.data_set_name\n",
@@ -179,15 +198,14 @@
     "    policy_name=POLICY_NAME,\n",
     "    render_mode=RenderMode.RGB_ARRAY_LIST,\n",
     "    device=\"cpu\",\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training ( If you want to use an already trained policy run the cell below and skip this one !! )"
+    "#### Training ( If you want to use an already trained policy run the cell below and skip this one !! )"
    ]
   },
   {
@@ -222,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "POLICY_FILE = \"policy_final.pth\"\n",
+    "POLICY_FILE = \"policy.pth\"\n",
     "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
     "# load the weights\n",
@@ -249,6 +267,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**As we can see the BCQ algorithm is able to stitch two trajectories in order to create an optimal one.**\n",
+    "\n",
+    "**Try to do the same with CQL. What do you observe?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0 - Add an obstacle around the target. The same as in notebook-161.\n",
+    "\n",
+    "1 - To modify BCQ parameters, please refer to **'offline_policy_config.policy_config'** and adjust the **'unlikely_action_threshold'**, which controls the distributional shift. This parameter ranges from 0 (conservative) to 1 (non-conservative). Experiment to find a value that ensures the agent remains within the desired distribution when obstacles are removed around the target\n",
+    "\n",
+    "3 - Repeat everything for the CQL algorithm."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -258,9 +303,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tianshou_dev",
+   "display_name": "training_rl_ivan",
    "language": "python",
-   "name": "tianshou_dev"
+   "name": "training_rl_ivan"
   },
   "language_info": {
    "codemirror_mode": {
@@ -272,7 +317,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.0"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
