--- a/notebooks/nb_182_Offline_rl_algorithms_II.ipynb
+++ b/notebooks/nb_182_Offline_rl_algorithms_II.ipynb
@@ -6,8 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import register_grid_envs\n",
     "import warnings\n",
     "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
@@ -40,16 +38,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**In this exercise we will test how conservative are the CQL and the BCQ**. \n",
-    "\n",
-    "As mentioned before regularization methods (like CQL) will be a good chooice when you want a more safe behavior for your agent but if you are intreseted in a optimal solution without too much care about safety contrainted methods like BCQ could be the way to go."
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Environment"
+    "**In this exercise, we'll evaluate the distributional shift in the CQL and BCQ algorithms and how they deal with it.**\n",
+    "\n",
+    "As mentioned earlier, regularization methods such as CQL are a suitable choice when prioritizing safety in your agent's behavior. However, if your focus is primarily on achieving an optimal solution with fewer constraints on safety, methods like BCQ may be more suitable.\n",
+    "\n",
+    "In this exercise we will start from (0,0) and we will try to reach the target at (4,7) but the target is protected by a wall. We will collect data again from sub-optimal policies as shown below (section 1.2).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Environment"
    ]
   },
   {
@@ -61,9 +68,9 @@
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
     "\n",
     "# Env. Config.\n",
-    "OBSTACLE = ObstacleTypes.horizontal_line_object_8x8\n",
+    "OBSTACLE = ObstacleTypes.door_object_8x8\n",
     "INITIAL_STATE = (0, 0)\n",
-    "FINAL_STATE = (0, 7)\n",
+    "FINAL_STATE = (4, 7)\n",
     "\n",
     "env_2D_grid_initial_config = Grid2DInitialConfig(\n",
     "    obstacles=OBSTACLE,\n",
@@ -80,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configure the two datasets"
+    "#### Configure the two datasets"
    ]
   },
   {
@@ -93,22 +100,22 @@
     "\n",
     "# Dataset I\n",
     "#BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_moves_downwards_within_strip\n",
-    "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_moves_downwards_within_strip_and_left\n",
-    "DATA_SET_IDENTIFIER_I = \"_move_downwards\"\n",
-    "NUM_STEPS_I = 3000\n",
+    "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_grid_suboptimal_0_0_to_4_7\n",
+    "DATA_SET_IDENTIFIER_I = \"_suboptimal\"\n",
+    "NUM_STEPS_I = 500\n",
     "\n",
     "# Dataset II\n",
     "#BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
-    "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
-    "DATA_SET_IDENTIFIER_II = \"_move_deterministic\"\n",
-    "NUM_STEPS_II = 300"
+    "BEHAVIOR_POLICY_II = BehaviorPolicyType.random#behavior_8x8_grid_deterministic_0_0_to_4_7\n",
+    "DATA_SET_IDENTIFIER_II = \"_random\"\n",
+    "NUM_STEPS_II = 8000"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Minari combined dataset"
+    "#### Create Minari combined dataset"
    ]
   },
   {
@@ -131,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rendering behavioral policy"
+    "#### Rendering behavioral policy"
    ]
   },
   {
@@ -140,7 +147,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Suboptimal policy\n",
+    "# Policy I\n",
+    "offpolicy_rendering(\n",
+    "    env_or_env_name=ENV_NAME,\n",
+    "    render_mode=RenderMode.RGB_ARRAY_LIST,\n",
+    "    behavior_policy_name=BEHAVIOR_POLICY_I,\n",
+    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
+    "    num_frames=1000,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Policy II\n",
     "offpolicy_rendering(\n",
     "    env_or_env_name=ENV_NAME,\n",
     "    render_mode=RenderMode.RGB_ARRAY_LIST,\n",
@@ -154,14 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Train the CQL and BCQ algorithms on the collected dataset and extract conclusions about what do you observe."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Choose yuor policy"
+    "#### Choose yuor policy"
    ]
   },
   {
@@ -188,16 +204,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training ( If you want to use an already trained policy run the cell below and skip this one !! )"
+    "#### Training"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "NUM_EPOCHS = 50\n",
+    "NUM_EPOCHS = 200\n",
     "BATCH_SIZE = 256\n",
     "UPDATE_PER_EPOCH = 100\n",
     "\n",
@@ -218,6 +236,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Restore policy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -231,6 +256,13 @@
     "log_name = os.path.join(name_expert_data, POLICY_NAME)\n",
     "log_path = get_trained_policy_path(log_name)\n",
     "policy.load_state_dict(torch.load(os.path.join(log_path, POLICY_FILE), map_location=\"cpu\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Render trained policy"
    ]
   },
   {
@@ -255,25 +287,9 @@
    "source": [
     "### Exercise 2:\n",
     "\n",
-    "Let use the same policies as before but let's change the target to (4,7). \n",
+    "a) Remove the obstacle. What do you think are going to be the results?\n",
     "\n",
-    "2-a) Use a free obstacle enviroment. What do you think are going to be the results?\n",
-    "\n",
-    "2-b) Use the BCQ now with the obstacle call wall_object8x8 (Please, run the next cell to give a look.)\n",
-    "     What do you think is going to happen with the BCQ?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env_2D_grid_initial_config.obstacles = ObstacleTypes.wall_object_8x8\n",
-    "env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=RenderMode.RGB_ARRAY_LIST), \n",
-    "                                          env_config=env_2D_grid_initial_config)\n",
-    "snapshot_env(env)\n",
-    "\n"
+    "b) Modify the parameters related to distributional shift in BCQ and CQL, and observe their impact on out-of-distribution behavior."
    ]
   },
   {
@@ -284,9 +300,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tianshou_dev",
+   "display_name": "training_rl_ivan",
    "language": "python",
-   "name": "tianshou_dev"
+   "name": "training_rl_ivan"
   },
   "language_info": {
    "codemirror_mode": {
@@ -298,7 +314,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.0"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
