--- a/notebooks/nb_190_Final_Remarks.ipynb
+++ b/notebooks/nb_190_Final_Remarks.ipynb
@@ -28,16 +28,8 @@
     "\n",
     "... and many more. \n",
     "\n",
-    "However if you have access to en an environment so fat online RL is hard to beat as you have the chance of exploration and feedback. Nevertheless this could change soon as a data-oriented approach to RL is being adopted (X-Embodimient huge datasets) where it is clear that robots trained with a lot of data in different situations will perform better than the ones only focused on one particular task. Also you could use multitask trained agents as a transfer learning policy for your particular task at hand."
+    "However, if you have access to an environment with abundant data, online Reinforcement Learning (RL) can be a powerful choice due to its potential for exploration and real-time feedback. Nevertheless, the landscape of RL is evolving, and a data-centric approach is gaining prominence, exemplified by vast datasets like X-Embodiment. It's becoming evident that robots trained with diverse data across various scenarios tend to outperform those solely focused on specific tasks. Furthermore, leveraging multi-task trained agents for transfer learning can be a valuable strategy for addressing your specific task at hand."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd1ef60a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
