--- a/notebooks/nb_140_CollectDataWithMinari.ipynb
+++ b/notebooks/nb_140_CollectDataWithMinari.ipynb
@@ -22,7 +22,7 @@
     "from training_rl.offline_rl.custom_envs.utils import Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import CustomEnv, RenderMode\n",
     "from training_rl.offline_rl.offline_policies.offpolicy_rendering import offpolicy_rendering\n",
-    "from random import random\n",
+    "import random\n",
     "import minari\n",
     "from minari import StepDataCallback, DataCollectorV0\n",
     "from training_rl.offline_rl.utils import delete_minari_data_if_exists\n",
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**In this notebook, we will create our own suboptimal policy and generate a Minari dataset using the collected data. The primary goal is to become familiar with the Minari library and learn how to collect data in the form of (step, action, reward) using it.**"
+    "**In this notebook, we will create our own suboptimal policy and generate a Minari dataset using the collected data. The primary goal is to become familiar with the Minari library and learn how to collect data in the form of (step, action, reward).**"
    ]
   },
   {
@@ -53,7 +53,7 @@
     "\n",
     "**Notation:**\n",
     "\n",
-    "In our grid world environment, the agent's position is represented as $(x_1, x_2)$, where $x_1$ corresponds to the vertical coordinate, and $x_2 corresponds to the horizontal coordinate. Additionally, we've placed obstacles within the environment to increase the task's complexity.\n",
+    "In our grid world environment, the agent's position is represented as $(x_1, x_2)$, where $x_1$ corresponds to the vertical coordinate, and $x_2$ corresponds to the horizontal coordinate. Additionally, we've placed obstacles within the environment to increase the task's complexity.\n",
     "\n",
     "Observations are represented as a 64-dimensional vector since we are working with an 8x8 grid. All vector elements are set to zero, except for the position where the agent is located, which is set to one.\n",
     "\n",
@@ -77,11 +77,10 @@
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
     "RENDER_MODE = RenderMode.RGB_ARRAY_LIST\n",
     "\n",
-    "\n",
     "# Configure the environment initial conditions. We also have different obstacles regidterd\n",
     "# in ObstacleTypes. \n",
     "env_2d_grid_initial_config = Grid2DInitialConfig(\n",
-    "    obstacles=ObstacleTypes.verical_object_8x8,\n",
+    "    obstacles=ObstacleTypes.vertical_object_8x8,\n",
     "    initial_state=(0, 0),\n",
     "    target_state=(0, 7),\n",
     ")\n",
@@ -171,7 +170,7 @@
     "    render_mode=RENDER_MODE,\n",
     "    policy_model= behavior_suboptimal_policy,\n",
     "    env_2d_grid_initial_config=env_2d_grid_initial_config,\n",
-    "    num_frames=1000,\n",
+    "    num_frames=200,\n",
     ")"
    ]
   },
@@ -297,15 +296,15 @@
     "\n",
     "[ \\[Fu.Justin et. al.\\] D4RL: Datasets for Deep Data-Driven Reinforcement Learning](https://arxiv.org/abs/2004.07219)\n",
     "\n",
-    "[ MINARI: A dataset API for Offline Reinforcement Learning ](https://minari.farama.org/main/content/basic_usage/) "
+    "[ MINARI: A dataset API for Offline Reinforcement Learning ](https://minari.farama.org/main/content/basic_usage/)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tianshou_dev",
+   "display_name": "rl-train-ivan",
    "language": "python",
-   "name": "tianshou_dev"
+   "name": "rl-train-ivan"
   },
   "language_info": {
    "codemirror_mode": {
@@ -317,9 +316,22 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.0"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
