--- a/notebooks/nb_150_Imitation_learning_theory.ipynb
+++ b/notebooks/nb_150_Imitation_learning_theory.ipynb
@@ -78,9 +78,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "rl-train-v4",
    "language": "python",
-   "name": "python3"
+   "name": "rl-train-v4"
   },
   "language_info": {
    "codemirror_mode": {
@@ -92,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
