--- a/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
+++ b/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
@@ -92,7 +92,7 @@
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
     "\n",
     "# Grid configuration\n",
-    "OBSTACLE = ObstacleTypes.dqn_obstacle_8x8\n",
+    "OBSTACLE = ObstacleTypes.obst_free_8x8#dqn_obstacle_8x8\n",
     "INITIAL_STATE = (3, 0)\n",
     "FINAL_STATE = (7, 7)\n",
     "\n",
@@ -145,7 +145,7 @@
     "config_combined_data = create_combined_minari_dataset(\n",
     "        env_name=ENV_NAME,\n",
     "        dataset_names = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
-    "        num_collected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
+    "        num_colected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
     "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
     "        combined_dataset_identifier = \"combined_data_sets_random_walk\",\n",
     "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
@@ -416,9 +416,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tianshou_dev",
+   "display_name": "training_rl",
    "language": "python",
-   "name": "tianshou_dev"
+   "name": "training_rl"
   },
   "language_info": {
    "codemirror_mode": {
@@ -430,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
@@ -447,5 +447,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
