--- a/notebooks/nb_151_imitation_learning-example.ipynb
+++ b/notebooks/nb_151_imitation_learning-example.ipynb
@@ -44,7 +44,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**In this exercise, we will work with a simple example of BC. The goal is to explore some of the issues with imitation learning and become familiar with the Tianshou library for offline RL training!**"
+    "# Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**In this exercise, we will work with a simple example of Behavioral cloning (BC) . The goal is to explore some of the issues with imitation learning and become familiar with the Tianshou library for offline RL training!**"
    ]
   },
   {
@@ -179,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's train our first offline RL algorithm: Imitation Learning.\n",
+    "## Let's train our first offline RL algorithm: Imitation Learning.\n",
     "\n",
     "Before we proceed, let's take a moment to become a little more familiar with the code. Let's spend some minutes reviewing:\n",
     "\n",
@@ -233,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a look at the state-action BC policy distribution."
+    "## Let's take a look at the state-action BC policy distribution."
    ]
   },
   {
@@ -245,7 +252,7 @@
    "outputs": [],
    "source": [
     "POLICY_FILE = \"policy.pth\"\n",
-    "NUM_EPISODES = 1 # as more episodes the better\n",
+    "NUM_EPISODES = 40 # as more episodes the better\n",
     "\n",
     "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
@@ -283,7 +290,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now visualize the policy by sampling from the policy distribution (imitation_policy_sampling=True) and by taking $\\arg \\max_a \\pi(s|a)$ (imitation_policy_sampling=False)"
+    "## Let's now visualize the policy \n",
+    "\n",
+    "Below the imitation_policy_sampling=False arguments will give us the $\\arg \\max_a \\pi(s|a)$. By setting it to True you will be sampling actions from the policy."
    ]
   },
   {
@@ -299,10 +308,7 @@
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
     "    num_frames=1000,\n",
     "    imitation_policy_sampling=False\n",
-    ")\n",
-    "\n",
-    "#final_collector = Collector(policy, env, exploration_noise=EXPLORATION_NOISE)\n",
-    "#final_collector.collect(n_episode=20, render=1 / 35)"
+    ")"
    ]
   },
   {
@@ -323,9 +329,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE 1:\n",
-    "\n",
-    "Remove the obstacle and examine the state-action distribution. What do you observe? Can you explain it?\n",
+    "## Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Remove the obstacle and examine the state-action distribution. What do you observe? Can you explain it?**\n",
     "\n",
     "Hint: You can create a copy of the previous environment and use ObstacleTypes.obst_free_8x8 in your configuration, like this:\n",
     "\n",
