--- a/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
+++ b/notebooks/nb_161_Offpolicy_distributional_shift_1.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE:\n",
+    "# EXERCISE:\n",
     "\n",
     "In this exercise we have two datasets that tries to bring the agent from (3,0) to (7,7) . One policy is suboptimal and the other is optimal.\n",
     "\n",
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SOLUTION:"
+    "## SOLUTION:"
    ]
   },
   {
@@ -92,7 +92,7 @@
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
     "\n",
     "# Grid configuration\n",
-    "OBSTACLE = ObstacleTypes.obst_free_8x8#dqn_obstacle_8x8\n",
+    "OBSTACLE = ObstacleTypes.dqn_obstacle_8x8\n",
     "INITIAL_STATE = (3, 0)\n",
     "FINAL_STATE = (7, 7)\n",
     "\n",
@@ -144,7 +144,7 @@
    "source": [
     "config_combined_data = create_combined_minari_dataset(\n",
     "        env_name=ENV_NAME,\n",
-    "        dataset_names = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
+    "        dataset_identifiers = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
     "        num_colected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
     "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
     "        combined_dataset_identifier = \"combined_data_sets_random_walk\",\n",
@@ -211,7 +211,7 @@
     "\n",
     "# Compute state-action data distribution\n",
     "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.02))\n",
+    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.05))\n",
     "\n",
     "snapshot_env(env)"
    ]
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "POLICY_FILE = \"policy_final.pth\"\n",
+    "POLICY_FILE = \"policy.pth\"\n",
     "\n",
     "# restore a policy with the same configuration as the one we trained.\n",
     "policy = restore_trained_offline_policy(offline_policy_config)\n",
@@ -361,15 +361,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2:"
+    "# Exercise 2:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1 - Train again the DQN but now with random data (i.e. suboptimal random policy  and increase the expert data too, \n",
-    "#### expert data ~ 30000).\n",
+    "## 1 - Train again the DQN but now with random data (i.e. suboptimal random policy  and increase the expert data too, expert data ~ 30000).\n",
     "\n",
     "Is the policy better? Why?\n",
     "\n",
@@ -399,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2 - Try now with  with the original problem and try one of the offline RL algorithms that we will introduce later:  BCQ.\n",
+    "## Try again with the original data but now with one of the offline RL algorithms that we will introduce later:  BCQ.\n",
     "\n",
     "What happens now?\n",
     "\n",
@@ -416,9 +415,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "training_rl",
+   "display_name": "training_rl_ivan",
    "language": "python",
-   "name": "training_rl"
+   "name": "training_rl_ivan"
   },
   "language_info": {
    "codemirror_mode": {
