--- a/notebooks/nb_162_Offpolicy_distributional_shift_2.ipynb
+++ b/notebooks/nb_162_Offpolicy_distributional_shift_2.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "# Exercise"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Environment"
+    "## Environment"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Configure the two datasets"
+    "## Configure the two datasets"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create combined Minari dataset"
+    "## Create combined Minari dataset"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Rendering behavioral policy"
+    "## Rendering behavioral policy"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### State-action distribution"
+    "## State-action distribution"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Policy to train"
+    "## Policy to train"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Training"
+    "## Training"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Restore policy"
+    "## Restore policy"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Let's visualize the policy"
+    "## Let's visualize the policy"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Questions:\n",
+    "## Questions:\n",
     "\n",
     "1 - What do you notice? What happens if you increase the collected data? Is it better? \n",
     "\n",
